@@ -1,3 +1,7 @@
+2009-02-12  Andreas Kirschbaum
+
+	* Accelerate pickup/drop operations.
+
 2009-02-08  Andreas Kirschbaum
 
 	* Properly update gauges.
